exports[`test renders active version 1`] = `
<span
  className="tag push-half-right tag--clickable tag--active test class"
  onClick={[Function]}
  style={
    Object {
      "color": "red",
      "paddingRight": "10px",
    }
  }>
  testLabel
  <span
    className="push-half-left icon-close"
    style={
      Object {
        "fontSize": "10px",
      }
    } />
</span>
`;

exports[`test renders cordova active version 1`] = `
<span
  className="tag push-half-right tag--clickable tag--nohover--active test class"
  onClick={[Function]}
  style={
    Object {
      "color": "red",
      "paddingRight": "10px",
    }
  }>
  testLabel
  <span
    className="push-half-left icon-close"
    style={
      Object {
        "fontSize": "10px",
      }
    } />
</span>
`;

exports[`test renders unclickeable version 1`] = `
<span
  className="tag push-half-right tag--active test class"
  onClick={[Function]}
  style={
    Object {
      "color": "red",
      "paddingRight": "10px",
    }
  }>
  testLabel
  <span
    className="push-half-left icon-close"
    style={
      Object {
        "fontSize": "10px",
      }
    } />
</span>
`;

exports[`test renders with props 1`] = `
<span
  className="tag push-half-right tag--clickable tag--active test class"
  onClick={[Function]}
  style={
    Object {
      "color": "red",
      "paddingRight": "10px",
    }
  }>
  testLabel
  <span
    className="push-half-left icon-close"
    style={
      Object {
        "fontSize": "10px",
      }
    } />
</span>
`;

exports[`test works with val 1`] = `
<span
  className="tag push-half-right tag--clickable tag--active test class"
  onClick={[Function]}
  style={
    Object {
      "color": "red",
      "paddingRight": "10px",
    }
  }>
  testVal
  <span
    className="push-half-left icon-close"
    style={
      Object {
        "fontSize": "10px",
      }
    } />
</span>
`;
